News
====

Version 0.7.0
-------------

*unreleased*

Major change: drop compatibility with Python 2, which allows significant
code cleanups.

Version 0.6.1
-------------

*released Tue, 24 Jul 2018*

Minor bugfix, performance and compatibility release.

* Minor compatibility fix: on Linux, drop the use of the `attr` library,
  and instead switch to the glibc header `sys/xattr.h`, which is
  provided for a really long time (since glibc 2.3). The formerly used
  header `attr/xattr.h` has been removed from the `attr` library in
  version 2.4.48. Fix provided by Lars Wendler, many thanks!
* Release the GIL when performing I/O. Patch proposed by xwhuang, many
  thanks. I tested this a long while back it seemed to impact
  performance on local filesystems, but upon further inspection, the
  downsides are minor (between 0 and 5%, in many cases negligible). For
  remote or slow filesystems, this should allow much increased
  parallelism.
* Fix symlink set operation on MacOS X; bugfix provided by adamlin, much
  appreciated! This also uncovered testing problems related to symlinks,
  which are now fixed (the bug would be caught by the updated tests).

Version 0.6.0
-------------

*released Mon, 23 Jan 2017*

Bugfix and feature release (hence the version bump).

The main change is to the implementation of how attributes are listed
and read. This was done due to existing race issues when attributes are
modified while being read (github issue #12), but basically all various
internal paths that dealt with retrieving an attribute value or listing
attributes were unified in a single helper function that does handle
such concurrent modifications. As a side effect, the size of the buffers
used for such reads have changed, which (depending on attribute value)
might change the trade-off between number of syscalls done and memory
usage.

As feature release, OSX support was contributed by Adam Knight
<adam@movq.us>, thanks a lot! I don't have access to OSX so the testing